[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.15.1"
serde = { version = "1.0", features = ["derive"] } # Per serializzare/deserializzare JSON (utile per le API)
env_logger = "0.11" # Per il logging, molto utile durante lo sviluppo
log = "0.4"
libc = "0.2" # Spesso utile per costanti come ENOENT, EIO, ecc.
reqwest = { version = "0.12", features = ["blocking", "json"] } # Per chiamate HTTP bloccanti e gestione JSON
nix = "0.30.1"
tokio = { version = "1.0", features = ["full"] }

