[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = { version = "0.15.1", default-features = false }
serde = { version = "1.0", features = ["derive"] } # JSON serialization/deserialization for the API
env_logger = "0.11" # Logging during development
log = "0.4"
libc = "0.2" # Error constants such as ENOENT and EIO
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] } # HTTP calls and JSON handling
nix = "0.30.1"
tokio = { version = "1.0", features = ["full"] }
