[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # JSON serialization/deserialization for the API
env_logger = "0.11" # Logging during development
log = "0.4"
remote-fs-protocol = { path = "../protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] } # HTTP calls and JSON handling

tokio = { version = "1.0", features = ["full"] }

[target.'cfg(all(not(windows), not(target_os = "macos")))'.dependencies]
fuser = { version = "0.15.1", default-features = false }
libc = "0.2" # Error constants such as ENOENT and EIO

# Need this for macOS
[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.15.1", default-features = false, features = ["libfuse"] }
libc = "0.2" # Error constants such as ENOENT and EIO

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.13.0", default-features = false, features = ["system"] }
winfsp-sys = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
serde_json = "1.0"
