[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.2", features = ["util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
libc = "0.2"
env_logger = "0.11"
log = "0.4"
